--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,19 @@
 [tox]
 envlist =
-	jsonlint
+	jsonlint,flake8
 skipsdist = True
 
 [testenv:jsonlint]
 commands =
 	/bin/bash -c \'set -euo pipefail && find conf/ -type f -name "*.json" | xargs -t -n1 python -m json.tool 2>&1 > /dev/null \'
+
+[testenv:flake8]
+deps = flake8
+commands = flake8
+
+[flake8]
+exclude = .venv,.tox
+max-line-length = 180
+ignore=E126,E128
+# E126 continuation line over-indented for hanging indent
+# E128 continuation line under-indented for visual indent
