Use isort to sort imports
isort is a Python utility to sort imports alphabetically,
and automatically separated into sections.

This adds to `setup.cfg` an isort config,
and updates the entire codebase.

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,20 @@
 [tox]
 envlist =
-	jsonlint,flake8
+	isort,jsonlint,flake8
 skipsdist = True
+
+[testenv:isort]
+deps = isort==4.2.15
+commands =
+    bash -c "find {toxinidir} \
+        -type d \
+            \( \
+              -path {toxinidir}/.git -o \
+              -path {toxinidir}/.tox -o \
+              -path {toxinidir}/.venv \
+            \) -prune -o \
+        -name '*.py' \
+        -print | xargs isort {posargs:--check-only} --verbose"
 
 [testenv:jsonlint]
 commands =
