Add Bash linting using bashate
bashate is "a pep8 equivalent for bash scripts" by OpenStack.
https://docs.openstack.org/bashate/latest/

- Add tox target running bashate on the entire code-base
   except for build directories (tox)
- Fix all Bash scripts accordingly

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,16 @@
 [tox]
 envlist =
-	isort,jsonlint,flake8
+	bashate,isort,jsonlint,flake8
 skipsdist = True
+
+[testenv:bashate]
+deps = bashate==0.5.1
+commands =
+    bash -c "grep --recursive --binary-files=without-match \
+        --files-with-match '^.!.*\(ba\)\?sh$' \
+        --exclude-dir .tox \
+        --exclude-dir .git \
+        {toxinidir} | xargs bashate --error . --verbose"
 
 [testenv:isort]
 deps = isort==4.2.15
