--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,6 @@ verbosity=3
 
 [isort]
 known_first_party = wikiloves
-known_third_party = flask,pymysql
+known_third_party = flask,mock,pymysql
 multi_line_output = 3
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
