--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,12 @@
 [tox]
 envlist =
-	bashate,isort,jsonlint,flake8
+	bashate,isort,jsonlint,flake8,py27
 skipsdist = True
+
+[testenv]
+deps =
+    -r{toxinidir}/requirements-test.txt
+commands = nosetests {posargs}
 
 [testenv:bashate]
 deps = bashate==0.5.1
