--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: conf/Dockerfile.web
-    command: python wikiloves.py
+    command: python app.py
     ports:
      - 5000:5000
     volumes:
