Fix indentation issues (per PEP8)
Also move Flake8 config to setup.cfg, per consistency
as we already have the isort config there.

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,7 @@ known_first_party = wikiloves
 known_third_party = flask,mock,pymysql
 multi_line_output = 3
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+
+[flake8]
+exclude = .venv,.tox
+max-line-length = 180
