--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-Flask==0.12.2
-PyMySQL==0.7.11
+-i https://pypi.org/simple
+click==6.7
+flask==0.12.2
+itsdangerous==0.24
+jinja2==2.10
+markupsafe==1.0
+pymysql==0.7.11
+werkzeug==0.14.1
