Use Pipenv to manage dev requirements
In 20fac14 we switch to pipenv/pipfile to manage requirements.

This does the same thing for the requirements-test.txt file
(renamed to requirements-dev for convention)

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,8 @@ skipsdist = True
 
 [testenv]
 deps =
-    -r{toxinidir}/requirements-test.txt
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/requirements-dev.txt
 commands = nosetests {posargs}
 
 [testenv:bashate]
