Whitelist bash external in tox file
Some tox targets are relying on bash, which made tox complain with
```
WARNING:test command found but not installed in testenv
  cmd: /bin/bash
Maybe you forgot to specify a dependency?
See also the whitelist_externals envconfig setting.
```

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements-dev.txt
 commands = nosetests {posargs}
+whitelist_externals = bash
 
 [testenv:bashate]
 deps = bashate==0.5.1
