Fix Jsonlint bash command in tox environment
(Unclear how long this has been broken)

--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ commands =
 
 [testenv:jsonlint]
 commands =
-	/bin/bash -c \'set -euo pipefail && find conf/ -type f -name "*.json" | xargs -t -n1 python -m json.tool 2>&1 > /dev/null \'
+	bash -c "set -euo pipefail && find conf/ -type f -name '*.json' | xargs -t -n1 python -m json.tool 2>&1 > /dev/null"
 
 [testenv:flake8]
 deps = flake8
