Ensure all tox environments use Python 2.7
Otherwise, one may well be using the Python3 on one’s system,
resulting in the flake8 to be very confused.

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist =
 skipsdist = True
 
 [testenv]
+basepython = python2.7
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements-dev.txt
