Use Ansible for deployment to Toolforge
Ansible is a configuration management tool.
https://docs.ansible.com/

This deprecates the use of Shell to provision and deploy
on Toolforge, and switches to an Ansible playbook.

- Add Ansible playbook deploy/main.yml
- Remove `bin/build.sh` Shell script
- Add tox target running ansible-lint
- Update `bin/deploy-to-toolforge.sh` to call Ansible

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-	bashate,isort,jsonlint,flake8,py27
+	bashate,isort,jsonlint,flake8,py27,ansible-lint
 skipsdist = True
 
 [testenv]
@@ -40,3 +40,7 @@ commands =
 [testenv:flake8]
 deps = flake8
 commands = flake8
+
+[testenv:ansible-lint]
+deps = ansible-lint
+commands = ansible-lint deploy/main.yml
