--- a/deploy/main.yml
+++ b/deploy/main.yml
@@ -50,3 +50,33 @@
         state: link
       tags:
         - paths
+
+    - name: Cron environment variables
+      cron:
+        name: "{{ item.name }}"
+        env: yes
+        value: "{{ item.value }}"
+      with_items:
+        - {name: 'UPDATE_SCRIPT', value: '/data/project/wikiloves/wikiloves/bin/update_database.sh'}
+        - {name: 'UPDATE_LOG_FILE', value: '/data/project/wikiloves/logs/update-database.log'}
+        - {name: 'CRONTAB_LOG_FILE', value: '/data/project/wikiloves/logs/crontab.log'}
+        - {name: 'JSUB_PARAMS', value: '-l release=trusty -mem 1000m -once -j y'}
+      tags:
+        - crontab
+
+    - name: Nightly job updating the database for all competitions
+      cron:
+        name: Nightly update
+        minute: 56
+        hour: 0
+        job: jsub $JSUB_PARAMS -o $UPDATE_LOG_FILE -N update_database_high $UPDATE_SCRIPT >> $CRONTAB_LOG_FILE
+      tags:
+        - crontab
+
+    - name: High-frequency job updating the current competition
+      cron:
+        name: High-frequency update for the current competition
+        minute: '*/15'
+        job: jsub $JSUB_PARAMS -o $UPDATE_LOG_FILE -N update_database_low $UPDATE_SCRIPT monuments2018 >> $CRONTAB_LOG_FILE
+      tags:
+        - crontab
