Enable high-frequency update for Wiki Loves Africa 2019
Wiki Loves Africa has started, so let's have
a high-frequency update during its tenure.

(This was added in 153f81a for Wiki Loves Monuments 2018)

--- a/deploy/main.yml
+++ b/deploy/main.yml
@@ -77,6 +77,6 @@
       cron:
         name: High-frequency update for the current competition
         minute: '*/15'
-        job: jsub $JSUB_PARAMS -o $UPDATE_LOG_FILE -N update_database_low $UPDATE_SCRIPT monuments2018 >> $CRONTAB_LOG_FILE
+        job: jsub $JSUB_PARAMS -o $UPDATE_LOG_FILE -N update_database_low $UPDATE_SCRIPT africa2019 >> $CRONTAB_LOG_FILE
       tags:
         - crontab
