Separate log files for update cron jobs
We have two cron jobs: a high-frequence one for the current competition,
and a low-frequency nightly one for all the other competitions.

With this each script will log to a different log file,
for easier auditing.

--- a/deploy/main.yml
+++ b/deploy/main.yml
@@ -58,7 +58,8 @@
         value: "{{ item.value }}"
       with_items:
         - {name: 'UPDATE_SCRIPT', value: '/data/project/wikiloves/wikiloves/bin/update_database.sh'}
-        - {name: 'UPDATE_LOG_FILE', value: '/data/project/wikiloves/logs/update-database.log'}
+        - {name: 'UPDATE_LOG_FILE_LOW', value: '/data/project/wikiloves/logs/update-database-low.log'}
+        - {name: 'UPDATE_LOG_FILE_HIGH', value: '/data/project/wikiloves/logs/update-database-high.log'}
         - {name: 'CRONTAB_LOG_FILE', value: '/data/project/wikiloves/logs/crontab.log'}
         - {name: 'JSUB_PARAMS', value: '-mem 1000m -once -j y'}
       tags:
@@ -69,7 +70,7 @@
         name: Nightly update
         minute: 56
         hour: 0
-        job: jsub $JSUB_PARAMS -o $UPDATE_LOG_FILE -N update_database_high $UPDATE_SCRIPT >> $CRONTAB_LOG_FILE
+        job: jsub $JSUB_PARAMS -o $UPDATE_LOG_FILE_LOW -N update_database_low $UPDATE_SCRIPT >> $CRONTAB_LOG_FILE
       tags:
         - crontab
 
@@ -77,6 +78,6 @@
       cron:
         name: High-frequency update for the current competition
         minute: '*/15'
-        job: jsub $JSUB_PARAMS -o $UPDATE_LOG_FILE -N update_database_low $UPDATE_SCRIPT africa2019 >> $CRONTAB_LOG_FILE
+        job: jsub $JSUB_PARAMS -o $UPDATE_LOG_FILE_HIGH -N update_database_high $UPDATE_SCRIPT africa2019 >> $CRONTAB_LOG_FILE
       tags:
         - crontab
