Enable high-frequency update for Wiki Loves Africa 2020
Wiki Loves Africa 2020 has started, so let's have
the high-frequency update during its tenure.

(Previously set to science2019 in a53ae6a)

See also https://commons.wikimedia.org/wiki/Commons:Wiki_Loves_Africa_2020

Bug: T246696

--- a/deploy/main.yml
+++ b/deploy/main.yml
@@ -78,6 +78,6 @@
       cron:
         name: High-frequency update for the current competition
         minute: '*/15'
-        job: jsub $JSUB_PARAMS -o $UPDATE_LOG_FILE_HIGH -N update_database_high $UPDATE_SCRIPT science2019 >> $CRONTAB_LOG_FILE
+        job: jsub $JSUB_PARAMS -o $UPDATE_LOG_FILE_HIGH -N update_database_high $UPDATE_SCRIPT africa2020 >> $CRONTAB_LOG_FILE
       tags:
         - crontab
